Impl. of localization changing Localizations

--- a/prj/fav_bpini/lang/en.json
+++ b/prj/fav_bpini/lang/en.json
@@ -2,5 +2,31 @@
   "app_title": "VRP Helper",
   "vrp_finder_no_camera_found": "No camera found...",
   "vrp_finder_camera_loading": "Camera is loading...",
-  "settings_page_title": "Settings"
+  "settings_page_title": "Settings",
+  "vrp_list_page_title": "History",
+  "vrp_list_adress_unspecified": "Unspecified",
+  "vrp_preview_page_title_edit": "Edit VRP",
+  "vrp_preview_page_title_new": "Create a new VRP",
+  "vrp_preview_page_scanned_at": "Scanned at",
+  "vrp_preview_page_edit": "EDIT",
+  "vrp_preview_page_again": "again",
+  "vrp_preview_page_address": "Address",
+  "vrp_preview_page_address_hint": "Adress, at which the VRP was scanned",
+  "vrp_preview_page_note": "Note",
+  "vrp_preview_page_note_detail": "Your own custom note",
+  "vrp_preview_page_audio_note_success": "Audio note recorded successfully",
+  "vrp_preview_page_source": "Source",
+  "error": "Error",
+  "cancel": "Cancel",
+  "save": "Save",
+  "ok": "OK",
+  "vrp_preview_page_dialog_position_title": "Location",
+  "vrp_preview_page_dialog_position_address_on_a_map": "Address on a map",
+  "vrp_preview_page_edit_dialog_title": "Manually edit VRP",
+  "vrp_preview_page_edit_dialog_first_part": "First part",
+  "vrp_preview_page_edit_dialog_second_part": "Second part",
+  "vrp_preview_page_edit_dialog_type": "VRP type:",
+  "vrp_preview_page_edit_dialog_this_part_must_not_be_empty": "This part must not be empty",
+  "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_five": "This part must not be longer than five characters",
+  "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_three": "This part must not be longer than three characters"
 }
