--- a/prj/fav_bpini/lang/cs.json
+++ b/prj/fav_bpini/lang/cs.json
@@ -1,4 +1,31 @@
 {
   "app_title": "SPZ Pomocník",
-  "settings_page_title": "Nastavení"
+  "settings_page_title": "Nastavení",
+  "vrp_list_page_title": "Historie",
+  "vrp_list_adress_unspecified": "Nezadáno",
+  "vrp_preview_page_title_edit": "Upravit SPZ",
+  "vrp_preview_page_title_new": "Nová VRP",
+  "vrp_preview_page_scanned_at": "Naskenováno",
+  "vrp_preview_page_edit": "UPRAVIT",
+  "vrp_preview_page_again": "znovu",
+  "vrp_preview_page_address": "Adresa",
+  "vrp_preview_page_address_hint": "Adresa, kde byla SPZ naskenována",
+  "vrp_preview_page_note": "Poznámka",
+  "vrp_preview_page_note_detail": "Vlastní poznámka",
+  "vrp_preview_page_audio_note_success": "Audio poznámka úspěšně narhána",
+  "vrp_preview_page_source": "Zdroj",
+  "error": "Chyba",
+  "cancel": "Zrušit",
+  "save": "Uložit",
+  "ok": "OK",
+  "vrp_preview_page_dialog_position_address_on_a_map": "Adresa na mapě",
+  "vrp_preview_page_edit_dialog_title": "Ručně upravit SPZ",
+  "vrp_preview_page_edit_dialog_first_part": "První část",
+  "vrp_preview_page_edit_dialog_second_part": "Druhá část",
+  "vrp_preview_page_edit_dialog_type": "Typ SPZ:",
+  "vrp_preview_page_edit_dialog_this_part_must_not_be_empty": "Tato část nesmí být prázdná",
+  "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_five": "Tato část nesmí být delší než pět znaků",
+  "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_three": "Tato část nesmí být delší než tři znaky",
+
+  "vrp_preview_page_dialog_position_title": "Pozice při naskenování"
 }
