Finished remaining localisations

--- a/prj/fav_bpini/lang/en.json
+++ b/prj/fav_bpini/lang/en.json
@@ -4,7 +4,7 @@
   "vrp_finder_camera_loading": "Camera is loading...",
   "settings_page_title": "Settings",
   "vrp_list_page_title": "History",
-  "vrp_list_adress_unspecified": "Unspecified",
+  "vrp_list_address_unspecified": "Unspecified",
   "vrp_preview_page_title_edit": "Edit VRP",
   "vrp_preview_page_title_new": "Create a new VRP",
   "vrp_preview_page_scanned_at": "Scanned at",
@@ -13,7 +13,7 @@
   "vrp_preview_page_address": "Address",
   "vrp_preview_page_address_hint": "Adress, at which the VRP was scanned",
   "vrp_preview_page_note": "Note",
-  "vrp_preview_page_note_detail": "Your own custom note",
+  "vrp_preview_page_note_hint": "Your own custom note",
   "vrp_preview_page_audio_note_success": "Audio note recorded successfully",
   "vrp_preview_page_source": "Source",
   "error": "Error",
@@ -28,5 +28,15 @@
   "vrp_preview_page_edit_dialog_type": "VRP type:",
   "vrp_preview_page_edit_dialog_this_part_must_not_be_empty": "This part must not be empty",
   "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_five": "This part must not be longer than five characters",
-  "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_three": "This part must not be longer than three characters"
+  "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_three": "This part must not be longer than three characters",
+  "vrp_type_all":"All types",
+  "vrp_type_one_line_classic":"Classic",
+  "vrp_type_one_line_old":"Historic",
+  "vrp_type_one_line_vip":"VIP",
+  "vrp_type_two_line_bike":"Two lined - motorcycle",
+  "vrp_type_two_line_other":"Two lined - other",
+  "vrp_filter_dialog_title":"Filter VRPs by a type",
+  "settings_page_dark_theme":"Dark theme",
+  "settings_page_language":"Language",
+  "settings_page_automatic_location":"Automatically gather the location after scanning a VRP"
 }
