--- a/prj/fav_bpini/lang/cs.json
+++ b/prj/fav_bpini/lang/cs.json
@@ -2,7 +2,7 @@
   "app_title": "SPZ Pomocník",
   "settings_page_title": "Nastavení",
   "vrp_list_page_title": "Historie",
-  "vrp_list_adress_unspecified": "Nezadáno",
+  "vrp_list_address_unspecified": "Nezadáno",
   "vrp_preview_page_title_edit": "Upravit SPZ",
   "vrp_preview_page_title_new": "Nová VRP",
   "vrp_preview_page_scanned_at": "Naskenováno",
@@ -11,7 +11,7 @@
   "vrp_preview_page_address": "Adresa",
   "vrp_preview_page_address_hint": "Adresa, kde byla SPZ naskenována",
   "vrp_preview_page_note": "Poznámka",
-  "vrp_preview_page_note_detail": "Vlastní poznámka",
+  "vrp_preview_page_note_hint": "Vlastní poznámka",
   "vrp_preview_page_audio_note_success": "Audio poznámka úspěšně narhána",
   "vrp_preview_page_source": "Zdroj",
   "error": "Chyba",
@@ -27,5 +27,16 @@
   "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_five": "Tato část nesmí být delší než pět znaků",
   "vrp_preview_page_edit_dialog_this_part_mustnt_be_greater_than_three": "Tato část nesmí být delší než tři znaky",
 
-  "vrp_preview_page_dialog_position_title": "Pozice při naskenování"
+  "vrp_preview_page_dialog_position_title": "Pozice při naskenování",
+  "vrp_type_all":"Všechny záznamy",
+  "vrp_type_one_line_classic":"Klasická",
+  "vrp_type_one_line_old":"Historická",
+  "vrp_type_one_line_vip":"VIP",
+  "vrp_type_two_line_bike":"Dvouřádková - motorka",
+  "vrp_type_two_line_other":"Dvouřádková - ostatní",
+
+  "vrp_filter_dialog_title":"Filtrovat SPZ dle typu",
+  "settings_page_dark_theme":"Tmavé téma",
+  "settings_page_language":"Jazyk",
+  "settings_page_automatic_location":"Automaticky získávat polohu při naskenování SPZ"
 }
