Edited a delaying future while loading And refactoring

--- a/prj/fav_bpini/lang/cs.json
+++ b/prj/fav_bpini/lang/cs.json
@@ -2,7 +2,8 @@
   "app_title": "SPZ Pomocník",
   "settings_page_title": "Nastavení",
   "vrp_list_page_title": "Historie",
-  "vrp_list_address_unspecified": "Nezadáno",
+  "vrp_list_page_no_record_found": "Nenalezen žádný záznam",
+  "vrp_list_address_unspecified": "Adresa nezadána",
   "vrp_preview_page_title_edit": "Upravit SPZ",
   "vrp_preview_page_title_new": "Nová VRP",
   "vrp_preview_page_scanned_at": "Naskenováno",
