--- a/prj/fav_bpini/lang/en.json
+++ b/prj/fav_bpini/lang/en.json
@@ -4,7 +4,8 @@
   "vrp_finder_camera_loading": "Camera is loading...",
   "settings_page_title": "Settings",
   "vrp_list_page_title": "History",
-  "vrp_list_address_unspecified": "Unspecified",
+  "vrp_list_page_no_record_found": "No records found",
+  "vrp_list_address_unspecified": "Address unspecified",
   "vrp_preview_page_title_edit": "Edit VRP",
   "vrp_preview_page_title_new": "Create a new VRP",
   "vrp_preview_page_scanned_at": "Scanned at",
