Refactoring and location permission overhaul

--- a/prj/fav_bpini/lang/cs.json
+++ b/prj/fav_bpini/lang/cs.json
@@ -15,6 +15,10 @@
   "vrp_preview_page_note_hint": "Vlastní poznámka",
   "vrp_preview_page_audio_note_success": "Audio poznámka úspěšně narhána",
   "vrp_preview_page_source": "Zdroj",
+  "vrp_preview_error_while_gathering_location": "Chyba při získávání polohy",
+  "vrp_preview_error_position_unknown": "Neznámý důvod",
+  "vrp_preview_error_position_permissions": "Aplikace nemá právo na získání polohy",
+  "vrp_preview_error_position_disabled": "GPS služby jsou vypnuté",
   "error": "Chyba",
   "cancel": "Zrušit",
   "save": "Uložit",
