--- a/prj/fav_bpini/lang/en.json
+++ b/prj/fav_bpini/lang/en.json
@@ -17,6 +17,10 @@
   "vrp_preview_page_note_hint": "Your own custom note",
   "vrp_preview_page_audio_note_success": "Audio note recorded successfully",
   "vrp_preview_page_source": "Source",
+  "vrp_preview_error_while_gathering_location": "Error while gathering location",
+  "vrp_preview_error_position_unknown": "Unknown reason",
+  "vrp_preview_error_position_permissions": "Application does not have the permission to gather the device location",
+  "vrp_preview_error_position_disabled": "GPS services are turned off",
   "error": "Error",
   "cancel": "Cancel",
   "save": "Save",
