--- a/prj/fav_bpini/lang/en.json
+++ b/prj/fav_bpini/lang/en.json
@@ -5,7 +5,7 @@
   "settings_page_title": "Settings",
   "vrp_list_page_title": "History",
   "vrp_list_page_no_record_found": "No records found",
-  "vrp_list_address_unspecified": "Address unspecified",
+  "vrp_list_address_unspecified": "No address",
   "vrp_preview_page_title_edit": "Edit VRP",
   "vrp_preview_page_title_new": "Create a new VRP",
   "vrp_preview_page_scanned_at": "Scanned at",
@@ -43,5 +43,9 @@
   "vrp_filter_dialog_title":"Filter VRPs by a type",
   "settings_page_dark_theme":"Dark theme",
   "settings_page_language":"Language",
-  "settings_page_automatic_location":"Automatically gather the location after scanning a VRP"
+  "settings_page_automatic_location":"Automatically gather the location after scanning a VRP",
+  "vrp_finder_error_no_camera": "This device does not have any camera",
+  "vrp_finder_error_permissions": "The application does not have the permissions to open the camera",
+  "vrp_finder_error_other": "Camera cannot be opened",
+  "back": "Back"
 }
