interpret 8 as B in onelined classic vrps

--- a/prj/fav_bpini/lang/cs.json
+++ b/prj/fav_bpini/lang/cs.json
@@ -13,7 +13,7 @@
   "vrp_preview_page_address_hint": "Adresa, kde byla SPZ naskenována",
   "vrp_preview_page_note": "Poznámka",
   "vrp_preview_page_note_hint": "Vlastní poznámka",
-  "vrp_preview_page_audio_note_success": "Audio poznámka úspěšně narhána",
+  "vrp_preview_page_audio_note_success": "Audio poznámka úspěšně nahrána",
   "vrp_preview_page_source": "Zdroj",
   "vrp_preview_error_while_gathering_location": "Chyba při získávání polohy",
   "vrp_preview_error_position_unknown": "Neznámý důvod",
