--- a/prj/fav_bpini/lang/en.json
+++ b/prj/fav_bpini/lang/en.json
@@ -12,7 +12,9 @@
   "vrp_preview_page_edit": "EDIT",
   "vrp_preview_page_again": "again",
   "vrp_preview_page_address": "Address",
-  "vrp_preview_page_address_hint": "Adress, at which the VRP was scanned",
+  "vrp_preview_page_address_hint": "Address, at which the VRP was scanned",
+  "vrp_preview_page_position_loaded": "Device location loaded",
+  "vrp_preview_page_position_loaded_with_address": "Device location and address loaded",
   "vrp_preview_page_note": "Note",
   "vrp_preview_page_note_hint": "Your own custom note",
   "vrp_preview_page_audio_note_success": "Audio note recorded successfully",
